@@ -44,7 +44,6 @@ import org.generationcp.middleware.domain.dms.VariableType;
 import org.generationcp.middleware.domain.dms.VariableTypeList;
 import org.generationcp.middleware.domain.etl.StudyDetails;
 import org.generationcp.middleware.domain.fieldbook.FieldMapInfo;
-import org.generationcp.middleware.domain.fieldbook.FieldMapLabel;
 import org.generationcp.middleware.domain.oms.StudyType;
 import org.generationcp.middleware.domain.oms.TermId;
 import org.generationcp.middleware.domain.search.StudyResultSet;
@@ -1061,11 +1060,13 @@ public class TestStudyDataManagerImpl{
     @Test
     public void testGetFieldMapCountsOfTrial() throws MiddlewareQueryException{
         List<Integer> trialIdList = new ArrayList<Integer>();
-        trialIdList.add(new Integer(-52));  
+        trialIdList.addAll(Arrays.asList(Integer.valueOf(-4)));  
         List<FieldMapInfo> fieldMapInfos = manager.getFieldMapInfoOfStudy(trialIdList, StudyType.T);
         for (FieldMapInfo fieldMapInfo : fieldMapInfos) {
             Debug.println(0, fieldMapInfo.getFieldbookName());
-            Debug.println(0, fieldMapInfo.getDatasets().toString());
+            if (fieldMapInfo.getDatasets() != null){
+                Debug.println(0, fieldMapInfo.getDatasets().toString());
+            }
         }
         //assertTrue(fieldMapCount.getEntryCount() > 0);
     }
@@ -1073,11 +1074,13 @@ public class TestStudyDataManagerImpl{
     @Test
     public void testGetFieldMapCountsOfNursery() throws MiddlewareQueryException {
         List<Integer> nurseryIdList = new ArrayList<Integer>();
-        nurseryIdList.add(new Integer(-52));  
+        nurseryIdList.addAll(Arrays.asList(Integer.valueOf(-1)));  
         List<FieldMapInfo> fieldMapInfos = manager.getFieldMapInfoOfStudy(nurseryIdList, StudyType.N);
         for (FieldMapInfo fieldMapInfo : fieldMapInfos) {
             Debug.println(0, fieldMapInfo.getFieldbookName());
-            Debug.println(0, fieldMapInfo.getDatasets().toString());
+            if (fieldMapInfo.getDatasets() != null){
+                Debug.println(0, fieldMapInfo.getDatasets().toString());
+            }
         }
         //assertTrue(fieldMapCount.getEntryCount() > 0);
     }
@@ -1109,7 +1112,8 @@ public class TestStudyDataManagerImpl{
                 break;
             }
         }*/
-        manager.saveOrUpdateFieldmapProperties(info.get(0));
+        //TODO
+        manager.saveOrUpdateFieldmapProperties(info, "");
     }
     
 }
